// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InputLabel /> renders InputLabel with props 1`] = `
<label
  className="mfui-beta-input-label"
  htmlFor="htmlFor"
>
  test
</label>
`;

exports[`<InputLabel /> renders InputLabel without props 1`] = `
<label
  className="mfui-beta-input-label"
>
  test
</label>
`;
